// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CatalyticActivityView component should render catalytic activity 1`] = `
<DocumentFragment>
  <div
    class="catalytic-activity"
  >
    <h3
      data-article-id="catalytic_activity"
    >
      Catalytic activity
    </h3>
    <div
      class="rhea-entry"
    >
      <div
        class="small"
      />
      Reaction name
      <div>
        This reaction proceeds in the 
        <span
          data-testid="direction-text"
        >
          forward
        </span>
         and the 
        <span
          data-testid="direction-text"
        >
          backward
        </span>
         directions.
      </div>
      <div>
        EC:EC:12112 (
        <a
          href="/uniprotkb?query=ec:EC:12112"
        >
          UniProtKB
        </a>
         | 
        <a
          class="external-link"
          href="https://enzyme.expasy.org/EC/EC:12112"
          rel="noopener"
          target="_blank"
        >
          ENZYME
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
         | 
        <a
          class="external-link"
          href="https://www.rhea-db.org/rhea?query=ec:EC:12112"
          rel="noopener"
          target="_blank"
        >
          Rhea
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
        )
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CatalyticActivityView component should render catalytic activity when comment does not have reactionCrossReferences 1`] = `
<DocumentFragment>
  <div
    class="catalytic-activity"
  >
    <div
      class="rhea-entry"
    >
      <div
        class="small"
      />
      Reaction name
      <div>
        This reaction proceeds in the 
        <span
          data-testid="direction-text"
        >
          forward
        </span>
         and the 
        <span
          data-testid="direction-text"
        >
          backward
        </span>
         directions.
      </div>
      <div>
        EC:EC:12112 (
        <a
          href="/uniprotkb?query=ec:EC:12112"
        >
          UniProtKB
        </a>
         | 
        <a
          class="external-link"
          href="https://enzyme.expasy.org/EC/EC:12112"
          rel="noopener"
          target="_blank"
        >
          ENZYME
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
         | 
        <a
          class="external-link"
          href="https://www.rhea-db.org/rhea?query=ec:EC:12112"
          rel="noopener"
          target="_blank"
        >
          Rhea
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
        )
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReactionDirection component should render ReactionDirection when one physiologicalReactions is present 1`] = `
<DocumentFragment>
  <div>
    This reaction proceeds in the 
    <span
      data-testid="direction-text"
    >
      forward
    </span>
     direction.
  </div>
</DocumentFragment>
`;

exports[`ReactionDirection component should render ReactionDirection when two physiologicalReactions are present and should be in correct order (forwards then backwards) 1`] = `
<DocumentFragment>
  <div>
    This reaction proceeds in the 
    <span
      data-testid="direction-text"
    >
      forward
    </span>
     and the 
    <span
      data-testid="direction-text"
    >
      backward
    </span>
     directions.
  </div>
</DocumentFragment>
`;

exports[`RheaReactionVisualizer component should render RheaReactionVisualizer 1`] = `
<DocumentFragment>
  <div
    class="rhea-reaction-visualizer__toggle"
  >
    <button
      class="button tertiary"
      type="button"
    >
      View reaction details
      <test-file-stub
        width="1ch"
      />
    </button>
  </div>
</DocumentFragment>
`;
